css overflow fixed

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -187,7 +187,7 @@ main > .content {
     position:relative;
     background-color: #f5f5f5;
     border-radius: 4px;
-    overflow: hidden;
+    overflow: auto;
 }
 
 
